k8s/aws/patch-storageclass.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
  namespace: yelp-prototype
spec:
  volumeClaimTemplates:
    - metadata:
        name: mongodb-data
      spec:
        storageClassName: gp3
