k8s/aws/patch-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: yelp-prototype
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
